Add conversion tracking keys

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ INVITE_FRIENDS_SALT=asdfasdfasdf
 CRASHLYTICS_KEY=any
 SEGMENT_KEY=any
 
+CONVERSION_ID=any
+CONVERSION_LABEL=any
+
 STAGING_CLIENT_KEY=key-here
 STAGING_CLIENT_SECRET=secret-here
 STAGING_DOMAIN=staging.server.com
